pase page sumatealequipo a scss

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -572,75 +572,56 @@ footer {
 
 /************* PAGINA SUMATE AL EQUIPO *************/
 /************* PAGINA SUMATE AL EQUIPO *************/
-
 .seccionSumateAlEquipoTop {
-    width: 100%;
-    background-color: $gris-superclarito;
+	width: 100%;
+	background-color: $gris-superclarito;
 }
-
 .contenedorSumateAlEquipoTop {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
-    align-items: center;
-    gap: 1rem;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
+	align-items: center;
+	gap: 1rem;
+	img {
+		width: 100%;
+		justify-self: center;
+	}
 }
-
 .datosPaginaSumateAlEquipo {
-    text-align: initial;
+	text-align: initial;
 }
-
-.contenedorSumateAlEquipoTop img {
-    width: 100%;
-    justify-self: center;
-}
-
-
 .seccionSumateAlEquipoMiddle {
-    width: 100%;
-    background-color: $gris-celestito;
+	width: 100%;
+	background-color: $gris-celestito;
 }
-
-
 .galeriaSumateAlEquipoMiddle {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-    gap: 2rem;
-    padding-top: 5rem;
-
-
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+	gap: 2rem;
+	padding-top: 5rem;
 }
-
 .itemSumateAlEquipoMiddle {
-
-    padding: 5rem 2rem;
-    text-align: center;
-    transition: all 0.3s;
-    
-
+	padding: 5rem 2rem;
+	text-align: center;
+	transition: all 0.3s;
+	&:hover {
+		border: 1px solid $naranja;
+		border-radius: 50%;
+		transform: translateY(-2rem);
+		background-color: $gris-superclarito;
+		border-bottom: 7px solid $naranja;
+		color: $naranja;
+	}
 }
-
-
-.itemSumateAlEquipoMiddle:hover {
-    border: 1px solid $naranja;
-    border-radius: 50%;
-    transform: translateY(-2rem);
-    background-color:$gris-superclarito;
-    border-bottom: 7px solid $naranja;
-    color: $naranja;
-    
+.seccionSubiCV {
+	width: 100%;
+	background-color: $gris-superclarito;
+	text-align: center;
 }
-
-.seccionSubiCV{
-    width: 100%;
-    background-color: $gris-superclarito;
-    text-align: center;
+.subiCVTextos {
+	p {
+		font-style: italic;
+	}
 }
-
-.subiCVTextos p{
-font-style: italic;
-}
-
-
 
 /************* PAGINA CONTACTO *************/
 /************* PAGINA CONTACTO  *************/
