--- a/css/styles.css
+++ b/css/styles.css
@@ -631,6 +631,10 @@ footer {
   .bienvenidaTextos {
     width: 100%;
     align-items: center; }
+    .bienvenidaTextos h1 {
+      font-size: 3rem;
+      font-weight: normal;
+      line-height: 4rem; }
   /* MEDIA QUERY NOSOTROS SECTION */
   .nosotros {
     flex-direction: column;
@@ -659,7 +663,20 @@ footer {
     text-align: center; }
   .recursoNotFoundTextos {
     width: 100%;
-    align-items: center; } }
+    align-items: center; }
+  .tituloSecundario {
+    font-size: 2.5rem;
+    line-height: 4rem; }
+  p {
+    font-size: 1.4rem; }
+  /* MEDIA QUERY PAGE NOSOTROS*/
+  .textosPaginaNosotros h1 {
+    font-size: 3rem;
+    font-weight: normal;
+    line-height: 4rem; }
+  /* MEDIA QUERY PAGE PREGUNTAS*/
+  .accordion-item {
+    font-size: 1rem; } }
 
 /* TABLET Y LAPTOP*/
 @media screen and (min-width: 770px) {
